New "Library Attributes" Part
Create new Part II dedicated to StdLib attributes that can change the
behavior of THINGs (See #114). Also, improve the organization of Parts
on "Library Classes" and "Verbs".

- Rename all ADoc sources from `StdLibMan2*.adoc` up (except Appendices)
  by increasing the part number by 1, to make room for the new Part II
  replacement.
- Add to "Library Attributes" Part an "Introduction" Ch. (TBD!)
- Move around the following chapters/sections:
  - "Additional THINGs Attributes" sec. from `StdLibMan3_06.adoc` to:
    `StdLibMan2_01.adoc`, i.e. from the "Library Class" Part to the new
    "Library Attributes" Part.
  - §10.1. "The two methods for examining things" from "Library Classes"
    (Ch 10. "Things") to PART Library Attributes » "Custom Descriptions".
  - Ch. "Things" from "Library Classes" to the "Verbs" Part, with a new
    title "Verbs and Things".
    - Rename files in Part III accordingly.
  - Move the section with the Verbs Table to a new independent Chapter
    with title "Verbs List".
- In "Library Classes" rename Ch. "Objects" to "Special Objects", and
  improve the sections levels of its sub-sections.
- Add to "Verbs" Part an "Introduction" Ch. (TBD!)
- Update README file accordingly.

Both the "Library Attributes" and "Verbs" Parts need to be properly
re-organized, by splitting long chapters into independent ones, and by
re-organizing their sub-sections as required.

--- a/extras_src/manual/StdLibMan.asciidoc
+++ b/extras_src/manual/StdLibMan.asciidoc
@@ -2,7 +2,7 @@
 :doctitle: Alan Standard Library v{StdLibVer} User's Manual
 :author: Anssi Räisänen
 :revnumber: {StdLibVer}-WIP
-:revdate: 2020-10-25
+:revdate: 2020-10-28
 :lang: en
 :doctype: book
 // TOC Settings:
@@ -50,21 +50,25 @@ Section numbering and max-depth of TOC level are temporarily kept to simplify an
 
 include::StdLibMan0_intro.adoc[]
 
-// Part I -- Getting Started
+// Part I -- Getting Started:
 
 include::StdLibMan1.adoc[]
 
-// Part II -- Library Classes
+// Part II -- Library Attributes:
 
 include::StdLibMan2.adoc[]
 
-// Part III -- Library Verbs
+// Part III -- Library Classes:
 
 include::StdLibMan3.adoc[]
 
-// Part IV -- Library Messages
+// Part IV -- Library Verbs:
 
 include::StdLibMan4.adoc[]
+
+// Part V -- Library Messages:
+
+include::StdLibMan5.adoc[]
 
 // Appendices
 
