--- a/extras_src/manual/StdLibManA_01.adoc
+++ b/extras_src/manual/StdLibManA_01.adoc
@@ -3,7 +3,7 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                                 Chapter 14                                   *
+*                   Appendix: Translating to Other Languages                   *
 *                                                                              *
 ********************************************************************************
 ////
