--- a/extras_src/manual/StdLibManA_02.adoc
+++ b/extras_src/manual/StdLibManA_02.adoc
@@ -3,7 +3,7 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                          Appendix B: Short Examples                          *
+*                           Appendix: Short Examples                           *
 *                                                                              *
 ********************************************************************************
 ////
