--- a/extras_src/manual/StdLibMan1.adoc
+++ b/extras_src/manual/StdLibMan1.adoc
@@ -2,7 +2,7 @@
 // *                                                                           *
 // *                   ALAN Standard Library User's Manual                     *
 // *                                                                           *
-// *                                  PART I                                   *
+// *                         PART I — Getting Started                          *
 // *                                                                           *
 // *****************************************************************************
 
