--- a/extras_src/manual/StdLibMan1_01.adoc
+++ b/extras_src/manual/StdLibMan1_01.adoc
@@ -3,7 +3,7 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                                  Chapter 2                                   *
+*                 PART Getting Started » Importing the Library                 *
 *                                                                              *
 ********************************************************************************
 ////
