--- a/extras_src/manual/StdLibMan1_05.adoc
+++ b/extras_src/manual/StdLibMan1_05.adoc
@@ -3,7 +3,7 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                                 Chapter 13                                   *
+*              PART Getting Started » Default Library Attributes               *
 *                                                                              *
 ********************************************************************************
 ////
