--- a/extras_src/manual/StdLibMan2.adoc
+++ b/extras_src/manual/StdLibMan2.adoc
@@ -3,19 +3,19 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                          PART II — Library Classes                           *
+*                         PART II — Library Attributes                         *
 *                                                                              *
 ********************************************************************************
 ////
 
-
-[[part.library-classes]]
-= Library Classes
+[[part.library-attributes]]
+= Library Attributes
 
 [partintro]
 --
-In this part you'll learn about the special classes pre-defined by the library, and how to use them to implement game objects of various types.
+In this part you'll learn about the special attributes pre-defined by the library, and how they can be used to provide `object` instances with special behaviors.
 --
+
 
 :leveloffset: +1
 
@@ -24,11 +24,5 @@ include::StdLibMan2_01.adoc[]
 include::StdLibMan2_02.adoc[]
 
 include::StdLibMan2_03.adoc[]
-
-include::StdLibMan2_04.adoc[]
-
-include::StdLibMan2_05.adoc[]
-
-include::StdLibMan2_06.adoc[]
 
 :leveloffset: -1
