--- a/extras_src/manual/StdLibMan3.adoc
+++ b/extras_src/manual/StdLibMan3.adoc
@@ -1,23 +1,32 @@
-// *****************************************************************************
-// *                                                                           *
-// *                   ALAN Standard Library User's Manual                     *
-// *                                                                           *
-// *                                 PART III                                  *
-// *                                                                           *
-// *****************************************************************************
+////
+********************************************************************************
+*                                                                              *
+*                     ALAN Standard Library User's Manual                      *
+*                                                                              *
+*                         PART III — Library Classes                           *
+*                                                                              *
+********************************************************************************
+////
 
 
-[[part.library-verbs]]
-= Library Verbs
-
+[[part.library-classes]]
+= Library Classes
 
 [partintro]
 --
-In this part you'll learn about the pre-defined verbs of the library, how to use them efficiently in your adventures, and how to adapt them to your needs.
+In this part you'll learn about the special classes pre-defined by the library, and how to use them to implement game objects of various types.
 --
 
 :leveloffset: +1
 
 include::StdLibMan3_01.adoc[]
+
+include::StdLibMan3_02.adoc[]
+
+include::StdLibMan3_03.adoc[]
+
+include::StdLibMan3_04.adoc[]
+
+include::StdLibMan3_05.adoc[]
 
 :leveloffset: -1
