--- a/extras_src/manual/StdLibMan3_03.adoc
+++ b/extras_src/manual/StdLibMan3_03.adoc
@@ -3,7 +3,7 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                      PART II — Library Classes » Actors                      *
+*                        PART Library Classes » Actors                         *
 *                                                                              *
 ********************************************************************************
 ////
