--- a/extras_src/manual/StdLibMan3_04.adoc
+++ b/extras_src/manual/StdLibMan3_04.adoc
@@ -3,19 +3,17 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                     PART II — Library Classes » Objects                      *
+*                    PART Library Classes » Special Objects                    *
 *                                                                              *
 ********************************************************************************
 ////
 
 
-[[ch.objects]]
-= Objects
+[[ch.special-objects]]
+= Special Objects
 
 
-== Object Classes
-
-Pre-defined object classes in the library:
+The Standard Library defines some specialized classes to implement special game objects:
 
 * `CLOTHING`
 * `DEVICE`
@@ -37,7 +35,7 @@ For scenery objects, use the attribute `scenery`.
 
 // @ADDED:
 [[sec.clothing]]
-=== CLOTHING
+== CLOTHING
 
 `CLOTHING` is a piece of clothing the hero or an NPC wears.
 As far as the hero is concerned, clothes are prevented from being worn in an illogical order, for example you cannot put on a shirt if you are already wearing a jacket, and so forth.
@@ -136,7 +134,7 @@ If the value of an attribute for a piece of CLOTHING is 0 in the table, don't me
 
 
 [[sec.clothing-table]]
-==== The Clothing Table
+=== The Clothing Table
 
 Here is the chart showing a selection of fairly typical clothing items and the values to set to obtain appropriate behaviour.
 Should you wish to create an article of CLOTHING not listed, usually a bit of lateral thought as to what it is most like and where it fits into the scheme of things will suggest a workable set of values, but be aware that you MUST use values in this chart, simply adding things with intermediate values is probably going to create nasty bugs:
@@ -167,7 +165,7 @@ Should you wish to create an article of CLOTHING not listed, usually a bit of la
 The library, as it stands, also prevents wearing of duplicate clothes, or things that are logically mutually exclusive -- for example the player can wear a dress or a skirt, but not both.
 
 [[sec.clothing-tips]]
-==== Clothing Tips & Tricks
+=== Clothing Tips & Tricks
 
 The hero's CLOTHING is described when the player types [.play]#&gt; _inventory_# in-game.
 If you want the listing of the hero's clothing to appear also when the player types [.play]#&gt; _x me_#, add "LIST worn." to the response of the examine verb of the hero:
@@ -207,7 +205,7 @@ include::{utf8dir}/wedding.a3ADocLog[tag=tuxedos]
 
 // @ADDED:
 [[sec.device]]
-=== DEVICE
+== DEVICE
 
 DEVICE is a machine or an electronic device, for example a TV.
 It can be turned (=switched) on and off if it is not broken.
@@ -276,7 +274,7 @@ END THE.
 // @ADDED:
 
 [[sec.door]]
-=== DOOR
+== DOOR
 
 DOOR can be opened, closed, locked and unlocked.
 It is by default closed (= NOT open) and NOT locked.
@@ -355,7 +353,7 @@ It is currently closed.
 
 
 [[sec.locked-doors]]
-==== Locked doors and keys
+=== Locked doors and keys
 
 To unlock a locked DOOR, it has to have a `matching_key` object attributed to it.
 Only this object can unlock the DOOR.
@@ -425,7 +423,7 @@ See also <<app.short-examples>>, <<sec.short-example.5,example 5>>.
 
 
 [[sec.liquid]]
-=== LIQUID
+== LIQUID
 
 LIQUID can be taken only if it is in a container.
 You can fill something with it, and you can pour it somewhere.
@@ -449,7 +447,7 @@ Consequently, [.play]#&gt; _empty bottle_# will work but [.play]#&gt; _empty jui
 
 
 [[sec.lightsource]]
-=== LIGHTSOURCE
+== LIGHTSOURCE
 
 LIGHTSOURCE is `natural` or `NOT natural` (a natural LIGHTSOURCE is for example a match or a torch).
 It can be turned on and off, lighted and extinguished (= put out) if it is not broken.
@@ -545,7 +543,7 @@ END THE torch.
 
 
 [[sec.listed_container]]
-=== LISTED_CONTAINER
+== LISTED_CONTAINER
 
 `LISTED_CONTAINER` is an object which has the `container` property.
 The contents of a `LISTED_CONTAINER` will be listed both after [.play]#&gt; _look_# (= in the room description), [.play]#&gt; _look in_# and [.play]#&gt; _examine_#, if it is open.
@@ -617,7 +615,7 @@ MAKE box NOT OPAQUE.
 (This is handled automatically by the library when a container is opened or closed.)
 
 
-=== Putting things in containers
+== Putting things in containers
 
 It is only possible to put something into a container if this something is included in the object.
 
@@ -687,7 +685,7 @@ END THE.
 
 
 [[sec.sound]]
-=== SOUND
+== SOUND
 
 `SOUND` can be listened to but not examined, searched, smelled or manipulated.
 It cannot initially be turned on or off, this has to be implemented manually by giving the sound the `switchable` attribute.
@@ -707,7 +705,7 @@ END THE.
 
 
 [[sec.supporter]]
-=== SUPPORTER
+== SUPPORTER
 
 `SUPPORTER`: You can put things on a SUPPORTER and you can stand, sit down or lie on it.
 
@@ -897,7 +895,7 @@ It is the author's responsibility to make certain objects in the location `NOT r
 
 
 [[sec.weapon]]
-=== WEAPON
+== WEAPON
 
 WEAPON is `fireable` (for example a cannon) or `NOT fireable` (for example a baseball bat), the latter being the default.
 The verbs `attack_with` and `kill_with` won't have successful outcomes if the second parameter in them is not a WEAPON.
@@ -914,7 +912,7 @@ END THE.
 
 
 [[sec.window]]
-=== WINDOW
+== WINDOW
 
 WINDOW can be opened, closed, looked through and out of.
 It will be described as being either open or closed when examined, by default.
