--- a/extras_src/manual/StdLibManA.adoc
+++ b/extras_src/manual/StdLibManA.adoc
@@ -2,7 +2,7 @@
 // *                                                                           *
 // *                   ALAN Standard Library User's Manual                     *
 // *                                                                           *
-// *                                 PART III                                  *
+// *                              PART Appendices                              *
 // *                                                                           *
 // *****************************************************************************
 
