--- a/extras_src/manual/StdLibMan4_04.adoc
+++ b/extras_src/manual/StdLibMan4_04.adoc
@@ -25,40 +25,56 @@ the library enables you to [.play]#&gt; _examine ball_#, [.play]#&gt; _take ball
 (with more or less successful default outcomes, depending on the verb) without your having to code anything specific to make this possible.
 
 
+[[sec.verbs-outcomes]]
+== Verbs Outcomes
 
-== The philosophy used in deciding successful and unsuccessful outcomes for action in the library verbs
+If you try the various library commands, inside an adventure game, you will notice that some commands will succeed to carry out the expected action(s), while others will report a failure message, without carrying out any action.
+For example, the response to [.play]#&gt; _drop [object]_# will be [.play]#Dropped.#, with the carried object being removed from the hero's inventory and placed in the location; whereas the response to [.play]#&gt; _attack [thing]_# will be [.play]#Resorting to brute force is not the solution here.#.
 
-If you try the various actions in-game, with the library imported, you will notice that some actions are successful and result in what the player commanded, while other actions do nothing (= the action is unsuccessful).
-For example the response to [.play]#&gt; _drop [object]_# will be [.play]#Dropped.#, the carried object being rejected from the hero's inventory and ending up in the location, while the response to [.play]#&gt; _attack [thing]_# is [.play]#Resorting to brute force is not the solution here.#.
-Which actions are allowed to succeed and which are not is based on what is the most reasonable and expected outcome for the action -- the outcome that the game author most unlikely needs to edit except for special circumstances.
-Please experiment with different verbs in-game to see whether the default outcome of a particular action is suitable for your game -- otherwise redefine the outcome of the verb in the my_game instance.
-How this is done is described in more detail further below.
+Which actions are allowed to succeed, and which not, is based on what is the most reasonable and expected outcome for any given action -- i.e. the outcome that game authors unlikely need to edit, except under special circumstances.
+
+// @TODO: Add XRef to "further on in this chapter", pointing to actual section
+//        dealing with verb overrides on `my_game`.
+
+You're strongly encouraged to experiment with the different verbs, to learn whether the default outcome of a particular action is suitable for your game -- and if it isn't, redefine the outcome of that verb on the `my_game` instance.
+You'll learn the details on how to achieve this further on in this chapter.
 
 // PAGE 65 //
 
 
+[[sec.alternative-syntaxes]]
+== Alternative Syntaxes
 
-== Adding alternative syntaxes for library verbs
+If you wish to add flexibility to your game by allowing alternative syntaxes for certain verbs, you can easily do it directly in your adventure source file, without having to edit the library sources.
 
-If you wish to add flexibility to your game by allowing alternative syntaxes for certain verbs, you can do that easily in your own game source file.
-Let's say that you want to for example change the syntax of the `talk_to` verb.
-Elsewhere in this manual you'll find all verb syntaxes listed.
-From there, you'll find out that the syntax of the talk verb is
+// @REMOVED: The following sentence was temporarily commented out, until we have
+//           a proper XRef to where all verbs syntaxes can be found.
+//           (most likely, the Verbs Table, but it needs to be checked first)
+
+// Elsewhere in this manual you'll find all verb syntaxes listed.
+
+Suppose that you wished to improve the syntax of the `talk_to` verb.
+First of all, you'll need find out what the default syntax of the `talk_to` verb looks like.
+You can look the verb up in the <<table.verbs,Verbs Table>> found in this manual, which provides the base syntax of each verb in a dedicated column; or you can peek inside the library source file {lib_verbs}, where are all verbs and syntaxes are defined.
+
+In this case, the default syntax of `talk_to` is:
 
 [source,alan, role="lib"]
 --------------------------------------------------------------------------------
 SYNTAX talk_to = talk 'to' (act)
 --------------------------------------------------------------------------------
 
-enabling commands like
+enabling commands like:
 
 [example,role="gametranscript"]
 ================================================================================
 &gt; _talk to man_
+&gt; _talk to the teacher_
+&gt; _talk to Daniel_
 ================================================================================
 
 
-Let's imagine that you want to change this so that it's possible for the player to type
+Now let's imagine that you wanted to extend the syntax so that it would be possible for the player to type:
 
 [example,role="gametranscript"]
 ================================================================================
@@ -66,15 +82,17 @@ Let's imagine that you want to change this so that it's possible for the player 
 ================================================================================
 
 
-or just
+or just:
+
 [example,role="gametranscript"]
 ================================================================================
 &gt; _t man_
 ================================================================================
 
 
-in other words, stating the character with whom you wish to talk, after the verb, without the preposition 'to'.
-The easiest way to allow this is just to add an additional syntax for `talk_to` in your own game file:
+In other words, being able to mention the character with whom to talk, directly after the verb, without requiring the '`to`' preposition.
+
+The easiest way to accomplish this is by providing an additional syntax for `talk_to` in your game source file:
 
 [source,alan]
 --------------------------------------------------------------------------------
@@ -82,14 +100,37 @@ SYNTAX  talk_to = talk (act).
         talk_to = t (act).
 --------------------------------------------------------------------------------
 
-This syntax declaration should be outside the `my_game` instance, in your own game file.
-This syntax declaration won't cancel the original syntax for `talk_to` defined in the library; it would still be possible for the player to type [.play]#&gt; _talk to man_#, as well.
+This syntax declaration must be written outside of the `my_game` instance, in the main context of your adventure source code.
+This additional syntax declaration won't replace the original syntax for `talk_to`, defined in the library; it would still be possible for the player to type [.play]#&gt; _talk to man_#, as well as using your newly defined alternative syntaxes.
 
-If you wish to cancel the original syntax altogether, do like this in your own game file:
+
+== Replacing Syntaxes
+
+Carrying on with the hypothetical `talk_to` example from the previous section, suppose you wished to replace the original syntax altogether, only allowing player to use your alternative syntax.
+In order to achieve this, you'll need to carry out the following steps.
+
+In your source adventure, suppress the action associated with the original syntax defined by the library:
+
+[[warn.my_game-verbs]]
+[WARNING]
+.Re-Defining Verbs on `my_game`???
+================================================================================
+We need to check if verbs defined on `my_game` really work as described here.
+
+* Do they?
+* _Why should_ they?
+
+The `my_game` is just an instance of `DEFINITION_BLOCK`, which is a `location` class, which the Hero _never enters into_; so, why should these verbs come into effect during play if they're never in scope?
+
+Maybe these texts are referencing older version of the library, which no longer apply to the its later versions.
+We need to test if this actually works, and if it does we need to explain why, otherwise we'll need to amend or purge similar examples and instructions from this Manual.
+
+(See link:https://github.com/AnssiR66/AlanStdLib/issues/115[Issue #115] for more info.)
+================================================================================
 
 [source,alan]
 --------------------------------------------------------------------------------
-THE my_game ISA DEFINITION BLOCK
+THE my_game ISA DEFINITION_BLOCK
   VERB talk_to
     DOES ONLY "To talk to someone, type ""talk [person]""
                or just ""t [person]""."
@@ -100,7 +141,7 @@ END THE my_game.
 // PAGE 66 //
 
 
-Then, outside the `my_game` instance, still in your own game source file, define your own _talk_ verb, for example:
+Then, outside the `my_game` instance, still in your game source file, define your own _talk_ verb alternative; for example:
 
 [source,alan]
 --------------------------------------------------------------------------------
@@ -108,31 +149,29 @@ SYNTAX my_talk_to = talk (act)
   WHERE act ISA ACTOR
     ELSE ...
 
+SYNONYMS t = talk.
+
 VERB my_talk_to
   DOES
     IF act = mr_smith
       THEN...
       ELSIF...
 END VERB.
-
-SYNONYMS t = talk.
 --------------------------------------------------------------------------------
 
-// @FIXME:  In the original PDF the following is an ordered list element starting
-//          from (b), but there wasn't any ongoing list here!
-
-a. Accessing the library:
-+
-Find the verb in the library file `lib_verbs.i` and make the desired changes to the syntax.
-(If you add or change a parameter, make sure that the verb checks function properly.)
 
 
+[[sec.adding-checks]]
+== Adding CHECKs
 
 
+[WARNING]
+================
+@CHECK ME: See <<warn.my_game-verbs,the above warning>> regarding verb-overriding on the `my_game` instance.
+================
 
-== Adding your own checks for library verbs
 
-Sometimes you might need to add an additional check to a library-defined verb.
+Sometimes you might need to add an additional `CHECK` to a library-defined verb.
 Add the check to the verb under the `my_game` instance and not in the library file.
 
 [source,alan]
@@ -148,22 +187,31 @@ THE soup ISA OBJECT AT kitchen
 END THE soup.
 --------------------------------------------------------------------------------
 
-Note that there is no DOES ONLY part above.
-The default outcome for the verb take would be carried out if the check was passed.
+Note that there is no `DOES ONLY` part in the above example.
+The default outcome for the `eat` verb would be carried out on the soup only if the added `CHECK` passes.
 
 // PAGE 67 //
 
 
-
-== Removing checks from library verbs
+[[sec.removing-checks]]
+== Removing CHECKs
 
 This requires accessing the library.
-Go to `lib_verbs.i`, find the verb you wish to remove a check from and remove the check. (Make sure the behavior of things in your game remains sensible; the library verb checks, after all, are there to ensure that everything functions in a reasonable and rational way.)
+Open {lib_verbs}, find the verb you wish to remove a check from, and remove the target `CHECK` block.
+
+WARNING: Make sure that after removing some default CHECKs the behavior of things in your game still remains coherent; after all, the default library verbs' checks are there to ensure that everything functions in a reasonable and consistent way.
 
 
-== Overriding default responses for library verbs
+[[sec.overriding-responses]]
+== Overriding Responses
 
-Define the verb outcome with a DOES ONLY section within the my_game instance:
+[WARNING]
+================
+@CHECK ME: See <<warn.my_game-verbs,the above warning>> regarding verb-overriding on the `my_game` instance.
+================
+
+
+Define the verb outcome with a `DOES ONLY` section within the `my_game` instance:
 
 [source,alan]
 --------------------------------------------------------------------------------
@@ -175,7 +223,9 @@ END THE.
 --------------------------------------------------------------------------------
 
 
-== Making your own verbs
+
+[[sec.custom-verbs]]
+== Custom Verbs
 
 Declare a new verb in the normal manner instructed in the ALAN manual, outside any instances.
 
@@ -209,8 +259,10 @@ ADD TO EVERY OBJECT
 END ADD.
 --------------------------------------------------------------------------------
 
+
+
 [[sec.restricted-actions]]
-== Restricted actions
+== Restricted Actions
 
 Usually, when you need to restrict a verb from doing what it usually does (= when you want to change the default outcome as defined by the library), you can use a DOES ONLY statement:
 
