Man: Restricted Actions
In Part "Library Verbs", convert sec. §18.8 "Restricted Actions" to an
independent chapter and start updating its contents to mirror the new
changes of Issue #113.

Also, begin to add admonition blocks to Parts, Chapters and Sections,
mentioning their current status for v2.2.0 and their pending tasks.

--- a/extras_src/manual/StdLibMan0_intro.adoc
+++ b/extras_src/manual/StdLibMan0_intro.adoc
@@ -192,6 +192,7 @@ The latter part of that chapter, where the illegal parameter messages and other 
 
 // @TODO: Amend section: code style conventions have changed.
 
+.v2.2.0 Status
 [WARNING]
 ================================
 This section needs to be rewritten because thanks to syntax highlighting we no longer need to rely on letter casing to pinpoint predefined ALAN keywords.
