--- a/extras_src/manual/StdLibMan1_02.adoc
+++ b/extras_src/manual/StdLibMan1_02.adoc
@@ -13,4 +13,8 @@
 
 [big]_A brief introduction to the Standard Library, it's constituent modules and what they do, its general structure and the philosophy behind it._#
 
-WARNING: *TBD!* This chapter still need to be written.
+.v2.2.0 Status
+[WARNING]
+=====================================
+*TBD!* This chapter still need to be written.
+=====================================
