--- a/extras_src/manual/StdLibMan4_01.adoc
+++ b/extras_src/manual/StdLibMan4_01.adoc
@@ -12,6 +12,7 @@
 = Introduction
 
 
+.v2.2.0 Status
 [WARNING]
 ==========================
 *TBD!* We need to write a general introduction on Library verbs, before dealing with specific verbs or their implementation aspects.
