--- a/extras_src/manual/StdLibMan5_02.adoc
+++ b/extras_src/manual/StdLibMan5_02.adoc
@@ -245,7 +245,7 @@ HAS restricted_level 0.
 
 // @FIXME: XRef to PDF page...
 By default, all verbs work normally, without restrictions.
-See also <<sec.restricted-actions>>.
+See also <<ch.restricted-actions>>.
 
 // PAGE 81 //
 
